Sun May 30 19:17:31 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: updated to b856dd07.
	  this cleans warnings.

Sun May 30 18:49:45 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rdoc/generator/template/darkfish/classpage.rhtml:
	  fix encoding value of XML declaration. [ruby-dev:41452]

Sun May 30 03:40:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_utf8, parser_tokadd_string): allow NUL
	  containing symbol literals, as well as String#to_sym.
	  [ruby-dev:41447]

Sun May 30 02:21:34 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/zlib/zlib.c (zstream_append_input2): add RB_GC_GUARD.
	  This caused failure when test/csv is executed with GC.stress = true.

Sun May 30 00:02:39 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* gc.c (force_chain_object, rb_objspace_call_finalizer): delete
	  finalizer entry after corresponding finalizer is executed.
	  This caused SEGV when test/cgi is executed with GC.stress = true.

Sat May 29 23:30:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (str_replace_shared): change embedded state atomically.
	  [ruby-core:29953] [ruby-dev:41456]

Fri May 28 00:32:25 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* insns.def (invokesuper): check consistency between class of self and
	  class of method being invoked by super.  This is temporary measure
	  for YARV.  See [ruby-core:30313] in detail.  See [ruby-dev:40959]
	  [ruby-dev:39772] [ruby-core:27000] [ruby-core:27230]

	* vm_insnhelper.c (vm_search_superclass): ditto.

Thu May 27 12:42:23 2010  Akinori MUSHA  <knu@iDaemons.org>

	* LGPL: Removed.  We no longer have LGPL'd source files in our
	  tree.

Wed May 26 18:40:23 2010  Masaya Tarui  <tarui@ruby-lang.org>

	* test/rinda/test_rinda.rb (TupleSpaceTest, TupleSpaceProxyTest):
	  kill a used thread at teardown.  [ruby-dev:41397]

Wed May 26 11:50:09 2010  Eric Hodel  <drbrain@segment7.net>

	* marshal.c (Init_marshal): document marshal_dump and marshal_load.
