@@ -1,3 +1,7 @@
+Sun May 30 22:14:14 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/set.rb (keep_if, select!): New methods [ruby-core:29749]
+
 Sun May 30 19:17:31 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/nkf/nkf-utf8/nkf.c: updated to b856dd07.
